fix: set minWidth

--- a/src/main/resources/at/fh/bif/swen/tourplanner/tourplaner.fxml
+++ b/src/main/resources/at/fh/bif/swen/tourplanner/tourplaner.fxml
@@ -8,7 +8,7 @@
 
   <top>
     <VBox>
-      <MenuBar>
+      <MenuBar minWidth="350">
         <Menu text="File">
           <MenuItem fx:id="newTourMenuItem" onAction="#onNewTourMenuItemClick" text="New Tour" />
           <MenuItem fx:id="exitMenuItem" onAction="#onExitClick" text="Exit" />
