feat: add tour attributes to record and Toolbar to UI

--- a/src/main/resources/at/fh/bif/swen/tourplanner/tourplaner.fxml
+++ b/src/main/resources/at/fh/bif/swen/tourplanner/tourplaner.fxml
@@ -44,8 +44,12 @@
                   </TableView>
                     </VBox>
                 </Tab>
-                <Tab text="General">
-
+                <Tab text="Tour Logs">
+                    <VBox>
+                        <ToolBar>
+                            <Button fx:id="addTourLog" text="Add Log"/>
+                        </ToolBar>
+                    </VBox>
                 </Tab>
             </tabs>
         </TabPane>
