feat: add tour editing, creation, and deletion
- Added Manage Tour tab with editing functionality
- Tours can be deleted from the Manage Tour tab
- New tours can be added via popup window
- ListView updates automatically after changes
- Tour record extended with id
- Implemented demo IDGenerator for tours

--- a/src/main/resources/at/fh/bif/swen/tourplanner/tourplaner.fxml
+++ b/src/main/resources/at/fh/bif/swen/tourplanner/tourplaner.fxml
@@ -55,6 +55,9 @@
                   </TableView>
                     </VBox>
                 </Tab>
+                <Tab text="Manage Tour">
+                    <fx:include source="manage_tour.fxml"/>
+                </Tab>
             </tabs>
         </TabPane>
     </center>
