--- a/src/main/resources/at/fh/bif/swen/tourplanner/add_tour.fxml
+++ b/src/main/resources/at/fh/bif/swen/tourplanner/add_tour.fxml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane hgap="10" prefHeight="286.0" prefWidth="340.0" vgap="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.14-internal" fx:controller="at.fh.bif.swen.tourplanner.view.AddTourController">
+<GridPane hgap="10" prefHeight="286.0" prefWidth="340.0" vgap="10" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.fh.bif.swen.tourplanner.view.AddTourController">
 
-    <Label text="Tour Name:" GridPane.columnIndex="0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="0" GridPane.vgrow="ALWAYS" />
+    <Label text="Tour Name:" GridPane.columnIndex="0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="0" GridPane.vgrow="ALWAYS">
+      <opaqueInsets>
+         <Insets />
+      </opaqueInsets></Label>
     <TextField fx:id="nameField" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="0" GridPane.vgrow="ALWAYS" />
 
     <Label text="Description:" GridPane.columnIndex="0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS" />
@@ -21,7 +25,19 @@
     <ComboBox fx:id="transportTypeCombo" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="4" GridPane.vgrow="ALWAYS" />
     
     <HBox alignment="CENTER_RIGHT" spacing="10" GridPane.columnIndex="1" GridPane.rowIndex="5">
-        <Button onAction="#onCancel" text="Cancel" />
-        <Button onAction="#onSave" text="Add Tour" />
+        <Button fx:id="btnCancelTour" onAction="#onCancel" text="Cancel" />
+        <Button fx:id="btnAddTour" onAction="#onSave" text="Add Tour" />
     </HBox>
+   <columnConstraints>
+      <ColumnConstraints />
+      <ColumnConstraints />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+   </rowConstraints>
 </GridPane>
