--- a/src/main/resources/at/fh/bif/swen/tourplanner/tourplaner.fxml
+++ b/src/main/resources/at/fh/bif/swen/tourplanner/tourplaner.fxml
@@ -11,7 +11,7 @@
     <top>
         <VBox>
             <MenuBar minWidth="350">
-                <Menu text="File">
+                <Menu text="File" fx:id="btnFileItem">
                     <MenuItem fx:id="newTourMenuItem" onAction="#onNewTourMenuItemClick" text="New Tour" />
                     <MenuItem fx:id="exitMenuItem" onAction="#onExitClick" text="Exit" />
                 </Menu>
