--- a/src/main/resources/at/fh/bif/swen/tourplanner/tourplaner.fxml
+++ b/src/main/resources/at/fh/bif/swen/tourplanner/tourplaner.fxml
@@ -11,7 +11,7 @@
     <top>
         <VBox>
             <MenuBar minWidth="350">
-                <Menu text="File" fx:id="btnFileItem">
+                <Menu fx:id="btnFileItem" text="File">
                     <MenuItem fx:id="newTourMenuItem" onAction="#onNewTourMenuItemClick" text="New Tour" />
                     <MenuItem fx:id="exitMenuItem" onAction="#onExitClick" text="Exit" />
                 </Menu>
@@ -28,11 +28,8 @@
             <tabs>
                 <Tab text="General">
                     <VBox fx:id="mapContainer" VBox.vgrow="ALWAYS">
-                  <WebView fx:id="mapView" prefWidth="800" prefHeight="600" VBox.vgrow="ALWAYS" />
-                  <Label fx:id="tourDataLabel"
-                         alignment="TOP_LEFT"
-                         VBox.vgrow="ALWAYS"
-                         prefWidth="727.0" prefHeight="325.0">
+                  <WebView fx:id="mapView" prefHeight="324.0" prefWidth="832.0" VBox.vgrow="ALWAYS" />
+                  <Label fx:id="tourDataLabel" alignment="TOP_LEFT" prefHeight="325.0" prefWidth="833.0" VBox.vgrow="ALWAYS">
 
                      <font>
                         <Font size="25.0" />
@@ -40,10 +37,10 @@
                     </VBox>
                 </Tab>
                 <Tab text="Tour Logs">
-                    <fx:include source="manage_tourlogs.fxml"/>
+                    <fx:include source="manage_tourlogs.fxml" />
                 </Tab>
                 <Tab text="Manage Tour">
-                    <fx:include source="manage_tour.fxml"/>
+                    <fx:include source="manage_tour.fxml" />
                 </Tab>
             </tabs>
         </TabPane>
