feat: Added points of interest to the project (unique feature)

--- a/src/main/resources/at/fh/bif/swen/tourplanner/tourplaner.fxml
+++ b/src/main/resources/at/fh/bif/swen/tourplanner/tourplaner.fxml
@@ -41,6 +41,9 @@
                      </font></Label>
                     </VBox>
                 </Tab>
+                <Tab text="POI">
+                    <fx:include source="poi_list.fxml" />
+                </Tab>
                 <Tab text="Tour Logs">
                     <fx:include source="manage_tourlogs.fxml" />
                 </Tab>
