--- a/src/main/resources/at/fh/bif/swen/tourplanner/manage_tourlogs.fxml
+++ b/src/main/resources/at/fh/bif/swen/tourplanner/manage_tourlogs.fxml
@@ -34,7 +34,7 @@
             <TextField fx:id="commentField" GridPane.columnIndex="1" />
 
             <Label text="Difficulty:" GridPane.rowIndex="1" />
-            <TextField fx:id="difficultyField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="difficultyField" promptText="value from 1-5" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
             <Label text="Distance (km):" GridPane.rowIndex="2" />
             <TextField fx:id="distanceField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
@@ -43,7 +43,7 @@
             <TextField fx:id="durationField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
             <Label text="Rating:" GridPane.rowIndex="4" />
-            <TextField fx:id="ratingField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <TextField fx:id="ratingField" promptText="value from 1-5" GridPane.columnIndex="1" GridPane.rowIndex="4" />
         </GridPane>
     </TitledPane>
    <TextField fx:id="searchTourLogField" promptText="Search" />
