--- a/src/main/resources/at/fh/bif/swen/tourplanner/poi_list.fxml
+++ b/src/main/resources/at/fh/bif/swen/tourplanner/poi_list.fxml
@@ -4,14 +4,12 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox spacing="10.0" xmlns="http://javafx.com/javafx/11.0.14-internal"
-      xmlns:fx="http://javafx.com/fxml/1"
-      prefWidth="600.0" prefHeight="400.0" fx:controller="at.fh.bif.swen.tourplanner.view.POIController">
+<VBox prefHeight="400.0" prefWidth="600.0" spacing="10.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.fh.bif.swen.tourplanner.view.POIController">
 
     <children>
-        <Label text="Points of interest" textAlignment="CENTER" maxWidth="Infinity">
+        <Label maxWidth="Infinity" text="Points of interest at your destination" textAlignment="CENTER">
             <font>
-                <Font size="30.0" />
+                <Font name="System Bold" size="30.0" />
             </font>
         </Label>
 
